--- a/docs/ESL-Solution/9-Additive-Models-and-Trees/ex9-2.md
+++ b/docs/ESL-Solution/9-Additive-Models-and-Trees/ex9-2.md
@@ -9,7 +9,7 @@ toc: false
 ---
 
 ???+ question "Ex. 9.2"
-    Let $\bb{A}$ be a known $k \times k$ matrix, $\bb{b}$ be a matrix known $k$-vector, and $\bb{z}$ be an unknown $k$-vector. A Gauss-Seidel algorithm for solving the linear system of equations $\bb{A}\bb{z} = \bb{b}$ works by successively solving for element $z_j$ in the $j$th equation, fixing all other $z_j$'s at their current guesses. This process is repeated for $j=1,2,...,k,1,2,...,k,...,$ until convergence (Golub and Van Loan, 1983 \cite{van1983matrix}).
+    Let $\bb{A}$ be a known $k \times k$ matrix, $\bb{b}$ be a matrix known $k$-vector, and $\bb{z}$ be an unknown $k$-vector. A Gauss-Seidel algorithm for solving the linear system of equations $\bb{A}\bb{z} = \bb{b}$ works by successively solving for element $z_j$ in the $j$th equation, fixing all other $z_j$'s at their current guesses. This process is repeated for $j=1,2,...,k,1,2,...,k,...,$ until convergence ([Matrix computations](https://books.google.com/books/about/Matrix_Computations.html?hl=de&id=X5YfsuCWpxMC)).
 	
     ???+ question "(a)"
         Consider an additive model with $N$ observations and $p$ terms, with the $j$th term to be fit by a linear smoother $\bb{S}_j$. Consider the following system of equations:
