--- a/docs/ESL-Solution/9-Additive-Models-and-Trees/ex9-5.md
+++ b/docs/ESL-Solution/9-Additive-Models-and-Trees/ex9-5.md
@@ -40,7 +40,7 @@ toc: false
 		&=&2.\non
 	\end{eqnarray}
 	
-    Similar arguments apply to the general $m$, thus we guess the degrees of freedom is $m$. See \cite{ye1998measuring} for more details on generalized degrees of freedom (GDF).
+    Similar arguments apply to the general $m$, thus we guess the degrees of freedom is $m$. See [On measuring and correcting the effects of data mining and model selection](https://www.jstor.org/stable/2669609) for more details on generalized degrees of freedom (GDF).
 	
     (b) See Code below.
 	!!! todo "The code and numbers below need revisit."
