--- a/docs/ESL-Solution/_10-Boosting-and-Additive-Trees/ex10-05.md
+++ b/docs/ESL-Solution/_10-Boosting-and-Additive-Trees/ex10-05.md
@@ -9,7 +9,7 @@ toc: false
 ---
 
 ???+ question "Ex. 10.5"
-    *Multiclass exponential loss* (Zhu et al., 2005 \cite{hastie2009multi}). For a $K$-class classification problem, consider the coding $Y=(Y_1,...,Y_K)^T$ with
+    *Multiclass exponential loss* ([Multi-class adaboost](https://hastie.su.domains/Papers/samme.pdf)). For a $K$-class classification problem, consider the coding $Y=(Y_1,...,Y_K)^T$ with
 	
     \begin{equation}
 		Y_k = \begin{cases}
