--- a/docs/ESL-Solution/_10-Boosting-and-Additive-Trees/ex10-06.md
+++ b/docs/ESL-Solution/_10-Boosting-and-Additive-Trees/ex10-06.md
@@ -9,7 +9,7 @@ toc: false
 ---
 
 ???+ question "Ex. 10.6"
-    *McNemar test* (Agresti, 1996 \cite{agresti2018introduction}). We support the test error rates on the spam data to be 5.5% for a generalized additive model (GAM), and 4.5% for gradient boosting (GBM), with a test sample of size 1536.
+    *McNemar test* ([An Introduction to Categorical Data Analysis](https://www.wiley.com/en-us/An+Introduction+to+Categorical+Data+Analysis%2C+3rd+Edition-p-9781119405283)). We support the test error rates on the spam data to be 5.5% for a generalized additive model (GAM), and 4.5% for gradient boosting (GBM), with a test sample of size 1536.
 	
     (a) Show that the standard error of these estimates is about 0.6%.
 	Since the same test data are used for both methods, the error rates are correlated, and we cannot perform a two-sample t-test. We can compare the methods directly on each test observation, leading to the summary in Table below.
