--- a/docs/ESL-Solution/_10-Boosting-and-Additive-Trees/ex10-12.md
+++ b/docs/ESL-Solution/_10-Boosting-and-Additive-Trees/ex10-12.md
@@ -26,7 +26,7 @@ toc: false
 		&=&0,\non
 	\end{eqnarray}
 
-	thus $(X_1-\rho X_2)$ and $X_2$ are uncorrelated. Note also that both $X_1-\rho X_2$ and $X_2$ are jointly normal, it follows that $X_1-\rho X_2$ and $X_2$ are independent (see, e.g., Section 4.7 in \cite{bertsekas2002introduction}).
+	thus $(X_1-\rho X_2)$ and $X_2$ are uncorrelated. Note also that both $X_1-\rho X_2$ and $X_2$ are jointly normal, it follows that $X_1-\rho X_2$ and $X_2$ are independent (see, e.g., Section 4.7 in [Introduction to probability](https://books.google.com/books/about/Introduction_to_Probability.html?id=yAy-PQAACAAJ&source=kp_book_description)).
 	
 	Thus, we have 
 
