--- a/docs/ESL-Solution/_12-Flexible-Discriminants/ex12-06.md
+++ b/docs/ESL-Solution/_12-Flexible-Discriminants/ex12-06.md
@@ -129,5 +129,5 @@ toc: false
         && \ \ \ \ \ \ \ \ \Theta^T\bb{D}_\pi\bb{I} = \bb{0}\non
     \end{eqnarray}
     
-    By classical results for generalized eigenvalue problems (see, e.g., \cite{ghojogh2019eigenvalue}), we know the solution to (12.53) is given by the eigenvectors of $\bb{S}$. 
+    By classical results for generalized eigenvalue problems (see, e.g., [Eigenvalue and generalized eigenvalue problems: Tutorial](https://arxiv.org/abs/1903.11240)), we know the solution to (12.53) is given by the eigenvectors of $\bb{S}$. 
 
