--- a/docs/ESL-Solution/_10-Boosting-and-Additive-Trees/ex10-11.md
+++ b/docs/ESL-Solution/_10-Boosting-and-Additive-Trees/ex10-11.md
@@ -14,4 +14,4 @@ toc: false
 ??? done "Soln. 10.11"
     In general, to calculate partial dependence as in (10.47), given a $x_s\in X_{\mathcal{S}}$, we need to make $N$ predictions for $N$ samples $(x_s, x_{i\mathcal{C}}) (i=1,...,N)$ and take an average.
 	
-	For decision trees, note that each node of the fitted tree remembers how many training samples went through it during the training, and thus we can use associated ratios to derive the final average. That means, we only need to traverse the tree for once. Please see \cite{nico2020} for a detailed description and scikit-learn's [implementation](https://github.com/scikit-learn/scikit-learn/blob/ff6f880755d12a380dbdac99f6b9d169aee8b588/sklearn/ensemble/_hist_gradient_boosting/_predictor.pyx#L99).
+	For decision trees, note that each node of the fitted tree remembers how many training samples went through it during the training, and thus we can use associated ratios to derive the final average. That means, we only need to traverse the tree for once. Please see [Efficient Partial Dependence Plots with decision trees](http://nicolas-hug.com/blog/pdps) for a detailed description and scikit-learn's [implementation](https://github.com/scikit-learn/scikit-learn/blob/ff6f880755d12a380dbdac99f6b9d169aee8b588/sklearn/ensemble/_hist_gradient_boosting/_predictor.pyx#L99).
