--- a/docs/ESL-Solution/_10-Boosting-and-Additive-Trees/ex10-03.md
+++ b/docs/ESL-Solution/_10-Boosting-and-Additive-Trees/ex10-03.md
@@ -41,11 +41,11 @@ toc: false
 	However for the conditional expectation $\eqref{eq:10cond}$, when $f(X) = h_1(X_S) + h_2(X_C)$ we get 
 
 	\begin{equation}
-		\tilde f_S(X_S) = E[h_1(X_S)|X_C] + X_C.\non
+		\tilde f_S(X_S) = E[h_1(X_S)|X_C] + h_2(X_C).\non
 	\end{equation}
 	
     When $f(X) = h_1(X_S)\cdot h_2(X_C)$, we get
 	
     \begin{equation}
-		\tilde f_S(X_S) = E[h_1(X_S)|X_C]\cdot X_C.\non
+		\tilde f_S(X_S) = E[h_1(X_S)|X_C]\cdot h_2(X_C).\non
 	\end{equation}
