--- a/docs/ESL-Solution/_10-Boosting-and-Additive-Trees/ex10-03.md
+++ b/docs/ESL-Solution/_10-Boosting-and-Additive-Trees/ex10-03.md
@@ -22,7 +22,7 @@ toc: false
 	
     \begin{equation}
 	\label{eq:10cond}
-		\tilde f_X(X_S) = E[f(X_S, X_C)|X_S].
+		\tilde f_X(X_S) = E[f(X_S, X_C)|X_C].
 	\end{equation}
 
 	Assuming the marginal density for $X_C$ is $\phi$. When $f(X) = h_1(X_S) + h_2(X_C)$, we have
