Fix ex4-2 description

--- a/docs/ESL-Solution/4-Linear-Methods-for-Classification/ex4-2.md
+++ b/docs/ESL-Solution/4-Linear-Methods-for-Classification/ex4-2.md
@@ -9,7 +9,7 @@ toc: false
 ---
 
 ???+ question "Ex. 4.2"
-	Suppose we have features $x\in \mathbb{R}^p$, a two-class response, with class sizes $N_1$, $N_2$, and the target coded as $-N/N_1$, $-N/N_2$.
+	Suppose we have features $x\in \mathbb{R}^p$, a two-class response, with class sizes $N_1$, $N_2$, and the target coded as $-N/N_1$, $N/N_2$.
 	???+ question "(a)" 
 		Show that the LDA rule classifies to class 2 if
 	 
