--- a/docs/ESL-Solution/4-Linear-Methods-for-Classification/ex4-2.md
+++ b/docs/ESL-Solution/4-Linear-Methods-for-Classification/ex4-2.md
@@ -141,7 +141,7 @@ toc: false
 				\left[\sum_{i=1}^Nx_ix_i^T - \frac{1}{N}\left(\sum_{i=1}^Nx_i\right)\left(\sum_{i=1}^Nx_i^T\right)\right]\beta = \sum_{i=1}^Ny_ix_i-\frac{1}{N}\left(\sum_{i=1}^Ny_i\right)\left(\sum_{i=1}^Nx_i\right).\label{eq:ex43beta}
 		\end{equation}
 
-		We pause here and turn to $\hat\mu_1, \hat\mu_2$ and $\Sigma$. Let's we encode $y_i$ for class 1 as $t_1$ and $y_i$ for class as $t_2$. Note that for this particular problem (b), $t_1=-N/N_1$ and $t_2=N/N_2$. By definition, we have
+		We pause here and turn to $\hat\mu_1, \hat\mu_2$ and $\Sigma$. Let's we encode $y_i$ for class 1 as $t_1$ and $y_i$ for class 2 as $t_2$. Note that for this particular problem (b), $t_1=-N/N_1$ and $t_2=N/N_2$. By definition, we have
 
 		\begin{eqnarray}
 				\hat\mu_1 = \frac{1}{N_1}\sum_{i:g_i=1}x_i, && \hat\mu_2 = \frac{1}{N_2}\sum_{i:g_i=2}x_i\nonumber\\
