--- a/docs/ESL-Solution/4-Linear-Methods-for-Classification/ex4-6.md
+++ b/docs/ESL-Solution/4-Linear-Methods-for-Classification/ex4-6.md
@@ -38,6 +38,6 @@ toc: false
 	    \|\beta_{\text{new}} - \beta_{\text{sep}}\|^2 &=& \|\beta_{\text{old}} - \beta_{\text{sep}} + y_iz_i\|^2\non\\
 	    &=&\|\beta_{\text{old}} - \beta_{\text{sep}}\|^2 + \|y_iz_i\|^2 + 2y_i(\beta_{\text{old}} - \beta_{\text{sep}})^Tz_i\non\\
 	    &=&\|\beta_{\text{old}} - \beta_{\text{sep}}\|^2 + 1 + 2y_i\beta_{\text{old}}^Tz_i - 2y_i\beta_{\text{sep}}^Tz_i\non\\
-	    &\le&\|\beta_{\text{old}} - \beta_{\text{sep}}\|^2 + 1 + 2\cdot 0 - 2 \cdot (-1)\non\\
+	    &\le&\|\beta_{\text{old}} - \beta_{\text{sep}}\|^2 + 1 + 2\cdot 0 - 2 \cdot 1 \non\\
 	    &=&\|\beta_{\text{old}} - \beta_{\text{sep}}\|^2-1.\non
 	\end{eqnarray}
