Fix ex 5-15 problem description

--- a/docs/ESL-Solution/5-Basis Expansions and Regularization/ex5-15.md
+++ b/docs/ESL-Solution/5-Basis Expansions and Regularization/ex5-15.md
@@ -11,7 +11,7 @@ toc: false
 ???+ question "Ex. 5.15"
     This exercise derives some of the results quoted in Section 5.8.1. Suppose $K(x,y)$ satisfying the conditions (5.45) and let $f(x)\in \mathcal{H}_K$. Show that
 	
-	(a) $\langle K(\cdot, x_i), f\rangle_{\mathcal{H}_K} = f(x_j)$.
+	(a) $\langle K(\cdot, x_i), f\rangle_{\mathcal{H}_K} = f(x_i)$.
 	
     (b) $\langle K(\cdot, x_i), K(\cdot, x_j)\rangle_{\mathcal{H}_K} = K(x_i, x_j)$.
 	
