Fix display eq problem in ex7-03

--- a/docs/ESL-Solution/7-Model-Assessment-and-Selection/ex7-03.md
+++ b/docs/ESL-Solution/7-Model-Assessment-and-Selection/ex7-03.md
@@ -86,7 +86,7 @@ toc: false
     ??? done "(c)"
         For general linear smoother $\boldsymbol{\hat f} = \bb{S}\bb{y}$, if $\bb{S}$ only depends on $\bb{X}$ and other tuning parameters (i.e., independent of $\bb{y}$), $\eqref{eq:ex73-a}$ still holds.
 
-        To see that, note that if we replace $y_i$ with $\hat f^{-i}(x_i)$ (obtained by \eqref{eq:73-1}) in $\textbf{y}$ and denote the new vector by $\textbf{y}'$, $\textbf{S}$ is not changed. Thus we have
+        To see that, note that if we replace $y_i$ with $\hat f^{-i}(x_i)$ (obtained by $\eqref{eq:73-1}$) in $\textbf{y}$ and denote the new vector by $\textbf{y}'$, $\textbf{S}$ is not changed. Thus we have
 
         \begin{eqnarray}
             \hat f^{-i}(x_i)
