--- a/docs/ESL-Solution/4-Linear-Methods-for-Classification/ex4-5.md
+++ b/docs/ESL-Solution/4-Linear-Methods-for-Classification/ex4-5.md
@@ -25,7 +25,7 @@ toc: false
 		l(\beta) = \sum_{i:x_i < x_0}[- \log(1+e^{\beta_1(x_i-x_0)})] + \sum_{i:x_i > x_0}[\beta_1(x_i-x_0)- \log(1+e^{\beta_1(x_i-x_0)})].\non
 	\end{equation}
 
-	It's easy to verify that both terms in the summation above will go to infinity when $\beta_1\ra\infty$, thus the maximum of the log-likelihood will never be achieved.
+	It's easy to verify that the first term above vanishes while the second term above goes to infinity when $\beta_1\ra\infty$, thus the maximum of the log-likelihood will never be achieved.
 
 	* (a) When $x\in\mathbb{R}^p$ with $p > 1$, there exists two subsets of $\{x_1,...,x_N\}$, $S_1$ and $S_2$, such that $S_1\cup S_2=\{x_1,...,x_N\}$, $S_1\cap S_2 = \emptyset$. Further more, there exists a hyperplane $\hat\beta^T x = 0$ in $\mathbb{R}^{p+1}$ and 
   
